# sapc

./: .gitignore  .issuetracker  CMakeLists.txt  FAQ.md  LICENSE.md  NEWS.md  README.md  sap-1.schema.json
.github/workflows/: main.yml
example/: CMakeLists.txt  common.sap  gen_header.py  module.sap  test.cc  test.sap
example/include/: base.sap
schema/: sap-1.schema.json
source/: CMakeLists.txt  analyze.cc  analyze.hh  ast.cc  ast.hh  compiler.cc  compiler.hh  context.cc  context.h  context.hh  file_util.hh  grammar.cc  grammar.hh  hash_util.hh  json.cc  json.hh  lexer.cc  lexer.hh  location.cc  location.hh  log.hh  main.cc  model.cc  model.hh  overload.hh  overloaded.hh  parser.cc  parser.hh  sapc.peg  schema.hh  state.cc  state.hh  string_util.hh  validate.cc  validate.hh
test/: CMakeLists.txt  common.sap  gen_header.py  sapc_test.cmake  test.cc  test.sap
test/arrays/: CMakeLists.txt  arrays_main.cc  arrays_test.sap
test/attributes/: CMakeLists.txt  attr_main.cc  attr_test.sap
test/basic/: CMakeLists.txt  basic_test.sap
test/complex/: CMakeLists.txt  common.sap  test.cc  test.sap
test/custom/: CMakeLists.txt  custom_base.sap  custom_main.cc  custom_test.sap
test/enum/: CMakeLists.txt  enum_main.cc  enum_test.sap
test/generics/: CMakeLists.txt  generics_main.cc  generics_test.sap
test/include/: CMakeLists.txt  base.sap  include_main.cc  include_test.sap
test/search/: CMakeLists.txt  search_main.cc  search_test.sap
